# RoBoCoR

./: CMakeLists.txt
communication/easycom/: CMakeLists.txt  Config.h  Dispatcher.h  EasyCom.cpp  EasyCom.h  Framer.h  Messages.h  Messages2.h  TransportInterface.h  cobs.h  messages.h
communication/easycom/can/: TransportCanLinux.cpp  TransportCanLinux.h
communication/easycom/can/linux/: TransportCanLinux.cpp  TransportCanLinux.h
communication/easycom/serial/: Framer.h  SerialCodec.h  SerialTransport.cpp  TransportSerialLinux.cpp  TransportSerialLinux.h  cobs.cpp  cobs.h  crc16.cpp  crc16.h
communication/easycom/serial/linux/: TransportSerialLinux.cpp  TransportSerialLinux.h
communication/easycom/test/: tests.cpp
storage/: LinearBuffer.h  RingBuffer.h
